--- a/accounts-prod.yml
+++ b/accounts-prod.yml
@@ -2,7 +2,7 @@ build:
   version: "1.0"
 
 accounts:
-  message: "Welcome to Bank accounts related prod APIs"
+  message: "Welcome to Bank accounts related prod webhook APIs"
   contactDetails:
     name: "John Doe - Product Owner (accounts)"
     email: "john-prod@bank.accounts.com"
