--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -2,7 +2,7 @@ build:
   version: "1.0"
 
 loans:
-  message: "Welcome to Bank loans related prod APIs"
+  message: "Welcome to Bank loans related prod webhook APIs"
   contactDetails:
     name: "John Doe - Product Owner (loans)"
     email: "john-prod@bank.loans.com"
