--- a/cards-prod.yml
+++ b/cards-prod.yml
@@ -2,7 +2,7 @@ build:
   version: "1.0"
 
 cards:
-  message: "Welcome to Bank cards related prod APIs"
+  message: "Welcome to Bank cards related prod webhook APIs"
   contactDetails:
     name: "John Doe - Product Owner (cards)"
     email: "john-prod@bank.cards.com"
