--- a/accounts.yml
+++ b/accounts.yml
@@ -2,7 +2,7 @@ build:
   version: "3.0"
 
 accounts:
-  message: "Welcome to Bank accounts related local APIs"
+  message: "Welcome to Bank accounts related local (docker: webhook) APIs"
   contactDetails:
     name: "John Doe - Developer (accounts)"
     email: "john@bank.accounts.com"
